2012-09-10
 * added BB (Big Brother)
 * moved config.h from include into ../, create prefixed version with AX_PREFIX_CONFIG_H

2012-09-09
 * night_next command, allows darks in queue

2012-09-03
 * publish-subscribe support * for all values

2012-08-28
 * rts2-nightreport prints last night data

2012-08-26
 * changed DETSIZE to rectangle value, properly write rectangles (defines getDisplayValue)

2012-07-31
 * add values debug flag

2012-07-29
 * -o flag for rts2-scriptexec, report scriptexec progress
 * filter_id (integer) used as index instead of filter name

2012-07-09
 * global replace of rts2_nan with NAN

0.9.4
=====

2012-06-20
 * mset API

2012-06-19
 * observatory/sexadecimals configuration option

2012-06-09
 * template files for XML-RPC images
 * moved Obs. Vermes specific code to subdirectories

2012-06-06
 * code with XML/JSON exception - properly reply to wrong password

0.9.3-1
=====

2012-05-22
 * OBJECT camera value

2012-05-21
 * WCS auxiliary values

2012-05-11
 * isExposing returns -2 on exposure ends
 * removed camWaitExposure

2012-05-09
 * improves multiple channel WCS headers writing

2012-05-08
 * channel coordinates

2012-05-07
 * scheduler library
 * moved cupola to library file
 * MaxDome II (Sirius dome) sceleton

2012-05-04
 * Python libraries - scriptcomm.py, flats.py

2012-04-24
 * time on sky statistics

0.9.2-1
=====

2012-04-18
 * functional multiple channels readout, getDataBuffer function

0.9.1-1
=====

2012-04-17
 * exposure_overwrite command to overwrite created files
 * PROTO_BINARY_KILLED, functional shared memory readout

2012-04-10
 * rts2-state supports -e option

2012-04-06
 * expand_wfn with expand path

2012-04-03
 * errorReported in Element, error propagation through script

2012-03-31
 * rts2-user can edit login files, not only database

2012-03-26
 * support for multi channel devices

2012-03-25
 * rts2-mon can send command(s) with --command option
 * use crypt for DB passwords

2012-03-24